fix z-index

--- a/public/style.css
+++ b/public/style.css
@@ -36,7 +36,7 @@ iframe {
 .modal {
     display: none; /* Hidden by default */
     position: fixed;
-    z-index: 1; /* Sit on top */
+    z-index: 100; /* Sit on top */
     padding-top: 150px;
     left: 0;
     top: 0;
@@ -319,7 +319,7 @@ iframe {
     position: sticky;
     top:0px;
     padding-top: 10px;
-    z-index: 900;
+    z-index: 1;
     background-color: #FAFCFF;
     padding-bottom: 5px;
     box-shadow: 0px 3px 5px #c2a04b;
